--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
         <div class="col-lg-3 col-md-3 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
-              <img src="assets/img/HIACe.png" class="img-fluid" alt="">
-              <a href="assets/img/HIACe.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
+              <img src="assets/img/hiace2.png" class="img-fluid" alt="">
+              <a href="assets/img/hiace2.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
               <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
