--- a/index.html
+++ b/index.html
@@ -592,6 +592,144 @@
         </div>
       </section> -->
     <!-- End Our Clients Section -->
+    <!-- ======= Our Clients Section ======= -->
+      <section id="clients">
+        <div class="container" data-aos="zoom-in">
+        </div>
+      </section>
+    <!-- End Our Clients Section -->
+
+    <section id="portfolio" class="section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h3 class="section-title">Paket Reguler</h3>
+          <p></p>
+        </header>
+
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
+      </div>
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+        <div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/kediri.jpg" class="img-fluid" alt="">
+              <a href="assets/img/kediri.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Kediri</a></h4>
+              <p class="text-center">Malang - Kediri PP</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center">08.00   14.00  19.00</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/juanda.jpg" class="img-fluid" alt="">
+              <a href="assets/img/juanda.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Juanda</a></h4>
+              <p class="text-center">Malang - Juanda PP</p>
+              <p class="text-center"> </p>
+            </div>
+          </div>
+        </div><div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/trenggalek.jpg" class="img-fluid" alt="">
+              <a href="assets/img/trenggalek.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Trenggalek</a></h4>
+              <p class="text-center">Malang - Trenggalek PP via Tulungagung</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center">03.00   7.00  14.00</p>
+            </div>
+          </div>
+        </div><div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/madiun.jpg" class="img-fluid" alt="">
+              <a href="assets/img/madiun.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Madiun</a></h4>
+              <p class="text-center">Malang - Madiun PP</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center">08.00   14.00  19.00</p>
+            </div>
+          </div>
+        </div><div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/semarang.jpg" class="img-fluid" alt="">
+              <a href="assets/img/semarang.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Semarang</a></h4>
+              <p class="text-center">Malang - Semarang PP</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center"> 19.00</p>
+            </div>
+          </div>
+        </div><div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/jogja.jpg" class="img-fluid" alt="">
+              <a href="assets/img/jogja.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Jogjakarta</a></h4>
+              <p class="text-center">Malang - Jogjakarta PP</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center">19.00</p>
+            </div>
+          </div>
+        </div><div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/bali.jpg" class="img-fluid" alt="">
+              <a href="assets/img/bali.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Bali</a></h4>
+              <p class="text-center">Malang - Bali PP</p>
+              <p class="text-center"> </p>
+              <p class="text-center"> Jam Operasional</p>
+              <p class="text-center">19.00</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      </div>
+    </section>
 
     <!-- ======= Testimonials Section ======= -->
       <!-- <section id="testimonials" class="section-bg">
