--- a/index.html
+++ b/index.html
@@ -167,34 +167,6 @@
 
   <main id="main">
 
-    <!-- ======= Featured Services Section Section ======= -->
-      <!-- <section id="featured-services">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-4 box">
-            <i class="bi bi-briefcase"></i>
-            <h4 class="title"><a href="">Lorem Ipsum Delino</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-
-          <div class="col-lg-4 box box-bg">
-            <i class="bi bi-card-checklist"></i>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-
-          <div class="col-lg-4 box">
-            <i class="bi bi-binoculars"></i>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-
-        </div>
-      </div>
-    </section> -->
-    <!-- End Featured Services Section -->
-
     <!-- ======= About Us Section ======= -->
     <section id="about">
       <div class="container" data-aos="fade-up">
@@ -207,50 +179,6 @@
             Sinar Kauripan Travel tidak hanya menawarkan paket wisata yang sudah tersusun dengan baik, tetapi juga bersedia mengakomodasi permintaan khusus pelanggan untuk membuat pengalaman wisata menjadi lebih personal dan berkesan. Dengan komitmen untuk memberikan layanan terbaik dan pengalaman wisata yang tak terlupakan, Sinar Kauripan Travel menjadi pilihan utama bagi mereka yang ingin menjelajahi pesona Malang dan sekitarnya dengan cara yang istimewa.
           </p>
         </header>
-
-        <!-- <div class="row about-cols">
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              </div>
-              <h2 class="title"><a href="#">Our Mission</a></h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              </div>
-              <h2 class="title"><a href="#">Our Plan</a></h2>
-              <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              </div>
-              <h2 class="title"><a href="#">Our Vision</a></h2>
-              <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
-              </p>
-            </div>
-          </div>
-
-        </div> -->
-
       </div>
     </section><!-- End About Us Section -->
 
@@ -311,88 +239,6 @@
       </div>
     </section><!-- End Call To Action Section -->
 
-    <!-- ======= Skills Section ======= -->
-      <!-- <section id="skills">
-        <div class="container" data-aos="fade-up">
-
-          <header class="section-header">
-            <h3>Our Skills</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-          </header>
-
-          <div class="skills-content">
-
-            <div class="progress">
-              <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">HTML <i class="val">100%</i></span>
-              </div>
-            </div>
-
-            <div class="progress">
-              <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">CSS <i class="val">90%</i></span>
-              </div>
-            </div>
-
-            <div class="progress">
-              <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
-              </div>
-            </div>
-
-            <div class="progress">
-              <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-      </section> -->
-    <!-- End Skills Section -->
-
-    <!-- ======= Facts Section ======= -->
-      <!-- <section id="facts">
-        <div class="container" data-aos="fade-up">
-
-          <header class="section-header">
-            <h3>Facts</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-          </header>
-
-          <div class="row counters">
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
-            </div>
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
-            </div>
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="38" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hard Workers</p>
-            </div>
-
-          </div>
-
-          <div class="facts-img">
-            <img src="assets/img/facts-img.png" alt="" class="img-fluid">
-          </div>
-
-        </div>
-      </section> -->
-    <!-- End Facts Section -->
-
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="section-bg">
       <div class="container" data-aos="fade-up">
@@ -403,14 +249,6 @@
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
-        <!-- <div class=" col-lg-12">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-        </div> -->
       </div>
 
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
@@ -424,7 +262,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="">Avanza</a></h4>
+              <h4><a href="">All New Avanza</a></h4>
               <p>Harga : Rp.650.000 / Hari </p>
               <p>Seat : 7 Kursi</p>
               <p>Transmisi : Matic/Manual</p>
@@ -454,15 +292,51 @@
         <div class="col-lg-3 col-md-3 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <figure>
+              <img src="assets/img/elflong.png" class="img-fluid" alt="">
+              <a href="assets/img/elflong.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Elf Long</a></h4>
+              <p>Harga : Rp. 1.000.000/hari</p>
+              <p>Seat : 19 Kursi</p>
+              <p>Transmisi : Matic/Manual</p>
+              <p>Jenis : VAN</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <figure>
               <img src="assets/img/Elf.png" class="img-fluid" alt="">
               <a href="assets/img/Elf.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
               <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="">Elf</a></h4>
-              <p>Harga : Rp. 1.000.000/hari</p>
+              <h4><a href="">Elf Giga</a></h4>
+              <p>Harga : Rp. 1.100.000/hari</p>
               <p>Seat : 19 Kursi</p>
+              <p>Transmisi : Matic/Manual</p>
+              <p>Jenis : VAN</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <figure>
+              <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
+              <a href="assets/img/hiaceCom.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
+              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+            </figure>
+
+            <div class="portfolio-info">
+              <h4><a href="">Hiace Commuter</a></h4>
+              <p>Harga :  Rp.1.200.000/hari</p>
+              <p>Seat : 16 Kursi</p>
               <p>Transmisi : Matic/Manual</p>
               <p>Jenis : VAN</p>
             </div>
@@ -478,7 +352,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="">Hiace</a></h4>
+              <h4><a href="">Hiace Premio</a></h4>
               <p>Harga :  Rp.1.200.000/hari</p>
               <p>Seat : 14 Kursi</p>
               <p>Transmisi : Matic/Manual</p>
@@ -486,81 +360,6 @@
             </div>
           </div>
         </div>
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <figure>
-              <img src="assets/img/portfolio/web2.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/web2.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 2"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
-            <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Web 2</a></h4>
-              <p>Web</p>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <figure>
-              <img src="assets/img/portfolio/app3.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/app3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 3"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
-            <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">App 3</a></h4>
-              <p>App</p>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <figure>
-              <img src="assets/img/portfolio/card1.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/card1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 1"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
-            <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Card 1</a></h4>
-              <p>Card</p>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <figure>
-              <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
-            <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Card 3</a></h4>
-              <p>Card</p>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <figure>
-              <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
-            <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Web 1</a></h4>
-              <p>Web</p>
-            </div>
-          </div>
-        </div> -->
 
       </div>
 
@@ -594,8 +393,26 @@
     <!-- End Our Clients Section -->
     <!-- ======= Our Clients Section ======= -->
       <section id="clients">
-        <div class="container" data-aos="zoom-in">
-        </div>
+          <div class="container" data-aos="fade-up">
+
+            <header class="section-header">
+              <h3>Pelayanan Kami</h3>
+              <p>
+                Pelayanan Full Day (maksimal pukul 22.00) kami mencakup : <br>
+              <strong><p class="text-center" > Include</strong> <br>
+                - Kapasitas penumpang sesuai dengan jumlah mobil yang dipesan<br>
+                - Driver yang sudah berpengalaman<br>
+                - Biaya bahan bakar (BBM) selama perjalanan.
+              </p>
+              <strong><p class="text-center" > Exclude</strong> <br>
+                - Biaya Parkir<br>
+                - Biaya Makan Driver
+              </p>
+              <strong><p class="text-center" > Rute</strong> <br>
+                Perjalanan mencakup area dalam kota Malang dan Batu.
+              </p>
+            </header>
+          </div>
       </section>
     <!-- End Our Clients Section -->
 
