--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               <p class="text-center">Malang - Kediri PP</p>
               <p class="text-center"> </p>
               <p class="text-center"> Jam Operasional</p>
-              <p class="text-center">08.00   14.00  19.00</p>
+              <p class="text-center">03.00, 07.00,   13.00,  18.00</p>
             </div>
           </div>
         </div>
