--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
         <div class="col-lg-3 col-md-3 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <figure>
-              <img src="assets/img/elflong.png" class="img-fluid" alt="">
-              <a href="assets/img/elflong.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
+              <img src="assets/img/Elf.png" class="img-fluid" alt="">
+              <a href="assets/img/Elf.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
               <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
@@ -310,8 +310,8 @@
         <div class="col-lg-3 col-md-3 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <figure>
-              <img src="assets/img/Elf.png" class="img-fluid" alt="">
-              <a href="assets/img/Elf.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
+              <img src="assets/img/elfgiga.png" class="img-fluid" alt="">
+              <a href="assets/img/elfgiga.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
               <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
