--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               <h4><a href="">Elf Long</a></h4>
               <p>Harga : Rp. 1.000.000/hari</p>
               <p>Seat : 19 Kursi</p>
-              <p>Transmisi : Matic/Manual</p>
+              <p>Transmisi : Manual</p>
               <p>Jenis : VAN</p>
             </div>
           </div>
@@ -319,7 +319,7 @@
               <h4><a href="">Elf Giga</a></h4>
               <p>Harga : Rp. 1.100.000/hari</p>
               <p>Seat : 19 Kursi</p>
-              <p>Transmisi : Matic/Manual</p>
+              <p>Transmisi : Manual</p>
               <p>Jenis : VAN</p>
             </div>
           </div>
@@ -337,7 +337,7 @@
               <h4><a href="">Hiace Commuter</a></h4>
               <p>Harga :  Rp.1.050.000/hari</p>
               <p>Seat : 16 Kursi</p>
-              <p>Transmisi : Matic/Manual</p>
+              <p>Transmisi : Manual</p>
               <p>Jenis : VAN</p>
             </div>
           </div>
@@ -355,7 +355,7 @@
               <h4><a href="">Hiace Premio</a></h4>
               <p>Harga :  Rp.1.200.000/hari</p>
               <p>Seat : 14 Kursi</p>
-              <p>Transmisi : Matic/Manual</p>
+              <p>Transmisi : Manual</p>
               <p>Jenis : VAN</p>
             </div>
           </div>
