Update link Hiace

--- a/index.html
+++ b/index.html
@@ -328,11 +328,14 @@
         <div class="col-lg-4 col-md-4 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
-              <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
-              <a href="assets/img/hiaceCom.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-            </figure>
-
+                <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
+                <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2">
+                    <i class="bi bi-plus"></i>
+                </a>
+                <a href="" class="link-details" title="More Details">
+                    <i class="bi bi-link"></i>
+                </a>
+            </figure> 
             <div class="portfolio-info">
               <h4><a href="">Hiace Commuter</a></h4>
               <p>Harga :  Rp.1.050.000/hari</p>
