--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <div class="portfolio-wrap">
             <figure>
                 <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
-                <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2">
+                <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking" title="App 2">
                     <i class="bi bi-plus"></i>
                 </a>
                 <a href="" class="link-details" title="More Details">
