Updates fix link

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <figure>
               <img src="assets/img/avanza.png" class="img-fluid" alt="">
               <a href="assets/img/avanza.png" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -276,7 +276,7 @@
             <figure>
               <img src="assets/img/Innova.png" class="img-fluid" alt="">
               <a href="assets/img/Innova.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -294,7 +294,7 @@
             <figure>
               <img src="assets/img/Elf.png" class="img-fluid" alt="">
               <a href="assets/img/Elf.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -312,7 +312,7 @@
             <figure>
               <img src="assets/img/elfgiga.png" class="img-fluid" alt="">
               <a href="assets/img/elfgiga.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -330,7 +330,7 @@
             <figure>
               <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
               <a href="assets/img/hiaceCom.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
             
             <div class="portfolio-info">
@@ -348,7 +348,7 @@
             <figure>
               <img src="assets/img/hiace2.png" class="img-fluid" alt="">
               <a href="assets/img/hiace2.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
-              <a href="" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
