--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
               <i class="bi bi-phone"></i>
               <h3>No. Telepon</h3>
               <p><a href="https://wa.me/+6282233547016" target="_blank">+62 822-3354-7016</a></p>
+              <p><a href="#">0341-2315-543</a></p>
             </div>
           </div>
 
