--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <figure>
               <img src="assets/img/avanza.png" class="img-fluid" alt="">
               <a href="assets/img/avanza.png" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Nama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0ASaya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png%3D%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
